# popcorn-fx

./: .bumpversion.cfg  .bumpversion.toml  .clang-format  .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  application.yml  cbindgen.toml  codecov.yml  pom.xml  versions.json
application/: Cargo.toml  build.rs  pom.xml
application-backend/: Cargo.toml  pom.xml
application-backend/src/: lib.rs
application-backend/src/popcorn/: mod.rs
application-media/: Cargo.toml  pom.xml
application-platform/: Cargo.toml  README.md  build.rs  pom.xml
application-platform/src/: lib.rs  platform_c.rs  platform_info_c.rs
application-ui/src/native/: CMakeLists.txt  IInputEvents.h  IInputEventsBridge.h  MediaKeyType.cpp  MediaKeyType.h  PopcornKeys.cpp  PopcornKeys.h  PopcornKeysCallbacks.h  PopcornKeysEventManager.cpp  PopcornKeysEventManager.h  PopcornKeysLib.cpp  PopcornKeysLib.h  main.cpp
application/src/: arrays.rs  lib.rs  media_mappers.rs
player-qt/src/native/: CMakeLists.txt  PopcornPlayer.cpp  PopcornPlayer.h  PopcornPlayer.qrc  PopcornPlayerEventManager.cpp  PopcornPlayerLib.h  QLambdaEvent.h
popcorn-fx/: Cargo.toml  build.rs
popcorn-fx-bootstrap/: Cargo.toml  build.rs
popcorn-fx-bootstrap/src/: bootstrapper.rs  data_installer.rs  launcher.rs  main.rs  test_macros.rs
popcorn-fx-bootstrap/test/: launcher.yml
popcorn-fx-common/: Cargo.toml
popcorn-fx-common/src/: launcher.rs  lib.rs
popcorn-fx-core/: Cargo.toml  pom.xml
popcorn-fx-core/src/: event_c.rs  lib.rs  media_c.rs  observer.rs  properties_c.rs  settings_c.rs  subtitle_c.rs  test_macros.rs  torrent_collection_c.rs
popcorn-fx-core/src/core/: callback.rs  callback_old.rs  channel.rs  handle.rs  mod.rs  page.rs  runtime.rs
popcorn-fx-core/test/: auto-resume.json  conversion-example.vtt  example-conversion.srt  favorites.json  favorites2.json  huge.txt  invalid_launcher.yml  large-[123].txt  movie-details.json  movie-search.json  popcorn-time_99.0.0.deb  settings.json  show-details.json  show-search.json  torrent-collection.json  tvdb_response.html  watched.json
popcorn-fx-dlna/: Cargo.toml
popcorn-fx-dlna/src/: lib.rs
popcorn-fx-dlna/src/dlna/: discovery.rs  errors.rs  mod.rs  models.rs  player.rs  server.rs
popcorn-fx-launcher/: Cargo.toml
popcorn-fx-launcher/src/: launcher.rs
popcorn-fx-logging/: Cargo.toml
popcorn-fx-logging/src/: errors.rs  lib.rs  logger.rs
popcorn-fx-opensubtitles/: Cargo.toml
popcorn-fx-opensubtitles/src/: lib.rs  model.rs  provider.rs  test_macros.rs
popcorn-fx-opensubtitles/src/opensubtitles/: mod.rs  model.rs  provider.rs  service.rs  test_macros.rs
popcorn-fx-opensubtitles/test/: download_response.json  example-conversion.vtt  search_result_episode.json  search_result_tt1156398.json  search_result_tt12003946.json  subtitle_example.srt  subtitle_existing.srt
popcorn-fx-platform/: Cargo.toml  pom.xml
popcorn-fx-platform/src/: lib.rs  platform.rs  platform_info_c.rs  platform_linux.rs  platform_win.rs  test_macros.rs
popcorn-fx-platform/src/platform/: mod.rs  platform.rs  platform_info.rs  platform_linux.rs  platform_mac.rs  platform_win.rs
popcorn-fx-players/: Cargo.toml
popcorn-fx-players/src/: lib.rs  test_macros.rs
popcorn-fx-players/src/chromecast/: cast.rs  device.rs  discovery.rs  errors.rs  mod.rs  models.rs  player.rs
popcorn-fx-players/src/dlna/: discovery.rs  errors.rs  mod.rs  models.rs  player.rs
popcorn-fx-players/src/vlc/: discovery.rs  errors.rs  mod.rs  player.rs  status.rs  test_macros.rs
popcorn-fx-torrent/: Cargo.toml  README.md
popcorn-fx-torrent-stream/: Cargo.toml
popcorn-fx-torrent-stream/resources/: mime.types
popcorn-fx-torrent-stream/src/: lib.rs  torrent_c.rs  torrent_stream_c.rs
popcorn-fx-torrent-stream/src/torrent/: mod.rs  wrapper.rs
popcorn-fx-torrent-stream/test/: mismatch.txt  range.txt  simple.txt
popcorn-fx-torrent/examples/: README.md  session.rs
popcorn-fx-torrent/examples/cli/: README.md  app.rs  app_logger.rs  dht_info.rs  main.rs  menu.rs  torrent_info.rs  tracker_info.rs
popcorn-fx-torrent/src/: lib.rs
popcorn-fx-torrent/src/torrent/: compact.rs  errors.rs  file.rs  info_hash.rs  magnet.rs  manager.rs  merkle.rs  mod.rs  peer_pool.rs  piece.rs  piece_chunk_pool.rs  piece_pool.rs  session.rs  session_cache.rs  torrent.rs  torrent_config.rs  torrent_flags.rs  torrent_health.rs  torrent_info.rs  torrent_metadata.rs  torrent_metrics.rs  torrent_peer.rs  torrent_pools.rs  torrent_request_buffer.rs
popcorn-fx-torrent/src/torrents/: errors.rs  file.rs  info_hash.rs  manager.rs  mod.rs  peer_pool.rs  piece.rs  pieces.rs  session.rs  torrent.rs  torrent_commands.rs  torrent_health.rs  torrent_info.rs  torrent_request_buffer.rs
popcorn-fx-torrent/test/: debian-udp.torrent  multifile.torrent  piece-1.iso  piece-1_10.iso  ubuntu-https.torrent  ubuntu-udp.torrent
popcorn-fx-trakt/: Cargo.toml
popcorn-fx-trakt/src/: lib.rs  provider.rs
popcorn-fx-trakt/src/trakt/: mod.rs  models.rs  provider.rs
popcorn-fx-vlc/: Cargo.toml
popcorn-fx-vlc/src/: lib.rs
popcorn-fx-vlc/src/vlc/: discovery.rs  player.rs
popcorn-fx/src/: fx.rs  lib.rs  main.rs  test_macros.rs
popcorn-fx/src/ffi/: arrays.rs  controls.rs  events.rs  favorites.rs  images.rs  loader.rs  log_bridge.rs  main.rs  media.rs  mod.rs  options.rs  players.rs  playlists.rs  properties.rs  screen.rs  sets.rs  subtitles.rs  torrent_collection_c.rs  torrents.rs  tracking.rs  update.rs
popcorn-fx/src/ipc/: application.rs  channel.rs  errors.rs  events.rs  favorites.rs  images.rs  loader.rs  log.rs  media.rs  message.rs  mod.rs  player.rs  playlist.rs  settings.rs  stream.rs  subtitle.rs  torrent.rs  tracking.rs  update.rs  watched.rs
popcorn-fx/test/: example.srt  favorites.json  settings.json  show-details.json  subtitles-movie.json  torrent-collection.json
torrent-frostwire/: Cargo.toml  build.rs  pom.xml
torrent-frostwire/src/: lib.rs
torrent-frostwire/src/torrent/: service.rs
video-vlc-native/src/native/: AppProperties.h  CMakeLists.txt  FontAwesome.h  Log.cpp  Log.h  LogLevel.h  LogLevelFlags.h  QLamba.h  (+25 more)
(+3161 files in other folders)
