[workspace]
resolver = "2"

members = [
    "popcorn-fx",
    "popcorn-fx-bootstrap",
    "popcorn-fx-core",
    "popcorn-fx-players",
    "popcorn-fx-opensubtitles",
    "popcorn-fx-platform",
    "popcorn-fx-torrent",
    "popcorn-fx-trakt",
]

[workspace.dependencies]
async-trait = "0.1.81"
base32 = "0.5.1"
base64 = "0.22.1"
byteorder = "1.5"
bytes = "1.5.0"
chrono = "0.4.38"
derive_more = "0.99.18"
directories = "5.0.1"
downcast-rs = "1.2.1"
futures = "0.3.30"
fx-callback = "1.0.0"
fx-handle = "1.0.0"
itertools = "0.14.0"
local-ip-address = "0.6.1"
log = "0.4.22"
oauth2 = "4.4.2"
open = "5.3.0"
percent-encoding = "2.3.1"
rand = "0.9.0"
regex = "1.10.5"
reqwest = "0.12.5"
serde = "1.0.219"
serde-xml-rs = "0.8.0"
serde_json = "1.0.140"
serde_yaml = "0.9.33"
thiserror = "1.0.63"
tokio = "1.45.1"
tokio-stream = "0.1.17"
tokio-util = "0.7.15"
url = "2.5.4"
warp = "0.3.7"

# dev-dependencies
httpmock = "0.7.0"
mockall = "0.13.1"
tempfile = "3.10.1"

[profile.release]
opt-level = 3
debug = false
strip = true
lto = true