[workspace]
resolver = "2"

members = [
    "popcorn-fx",
    "popcorn-fx-bootstrap",
    "popcorn-fx-core",
    "popcorn-fx-players",
    "popcorn-fx-opensubtitles",
    "popcorn-fx-platform",
    "popcorn-fx-trakt",
]

[workspace.dependencies]
async-trait = "0.1"
axum = "0.8.8"
base32 = "0.5.1"
base64 = "0.22.1"
byteorder = "1.5"
bytes = "1.10"
chrono = "0.4"
derive_more = "2.1"
directories = "5.0.1"
downcast-rs = "1.2.1"
futures = "0.3"
fx-callback = "1.0"
fx-handle = "1.0"
fx-torrent = "0.2.0"
itertools = "0.14.0"
local-ip-address = "0.6"
log = "0.4"
log4rs = "1.4.0"
oauth2 = "4.4"
open = "5.3.0"
percent-encoding = "2.3"
protobuf = "3.7.1"
rand = "0.9.0"
regex = "1.12.2"
reqwest = "0.13.1"
serde = "1.0.228"
serde-xml-rs = "0.8.1"
serde_json = "1.0.145"
serde_yaml = "0.9.33"
thiserror = "2.0.17"
tokio = "1.48.0"
tokio-stream = "0.1.17"
tokio-util = "0.7.16"
url = "2.5.7"

# dev-dependencies
httpmock = "0.8"
mockall = "0.14.0"
tempfile = "3.23"

[profile.release]
opt-level = 3
debug = false
strip = true
lto = true