[workspace]
resolver = "2"

members = [
    "popcorn-fx",
    "popcorn-fx-bootstrap",
    "popcorn-fx-core",
    "popcorn-fx-logging",
    "popcorn-fx-opensubtitles",
    "popcorn-fx-platform",
    "popcorn-fx-players",
    "popcorn-fx-trakt",
]

[workspace.dependencies]
async-trait = "0.1.89"
axum = "0.8.8"
base32 = "0.5.1"
base64 = "0.22.1"
byteorder = "1.5.0"
bytes = "1.11.1"
chrono = "0.4.44"
derive_more = "2.1.1"
directories = "6.0.0"
downcast-rs = "2.0.2"
futures = "0.3.32"
fx-callback = "2.0.0"
fx-handle = "1.0.0"
fx-torrent = "0.8.0"
itertools = "0.14.0"
libc = "0.2.184"
local-ip-address = "0.6.11"
log = "0.4.29"
log4rs = "1.4.0"
oauth2 = "5.0.0"
open = "5.3.3"
percent-encoding = "2.3.2"
protobuf = "3.7.1"
rand = "0.10.0"
regex = "1.12.3"
reqwest = "0.13.2"
serde = "1.0.228"
serde-xml-rs = "0.8.2"
serde_json = "1.0.149"
serde_yaml = "0.9.33"
thiserror = "2.0.18"
tokio = "1.51.0"
tokio-rustls = "0.26.4"
tokio-stream = "0.1.18"
tokio-util = "0.7.18"
url = "2.5.8"

# dev-dependencies
httpmock = "0.8.3"
mockall = "0.14.0"
tempfile = "3.27.0"

[profile.release]
opt-level = 3
debug = false
strip = true
lto = true
