[package]
name = "application-backend"
version = "0.4.0"
edition = "2021"
rust-version = "1.62"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.16"
log4rs = "1.1.1"

[build-dependencies]
cbindgen = "0.24.3"
