[package]
name = "application-media"
version = "0.4.0"
edition = "2021"
rust-version = "1.62"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.16"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.39.0", features = [
    "Media",] }

[build-dependencies]
cbindgen = "0.24.3"
