[package]
name = "application-platform"
version = "0.4.0"
edition = "2021"
rust-version = "1.62"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
application-backend = { path = "../application-backend" }
log = "0.4.17"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.39.0", features = [
    "Win32_System_Power",
    "Win32_Foundation",
    "Win32_System_Threading"] }

[build-dependencies]
cbindgen = "0.24.3"
