[package]
name = "popcorn-fx"
version = "0.4.0"
edition = "2021"
rust-version = "1.62"
publish = false
license-file = "../LICENSE"
description = "The main Popcorn FX"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
popcorn-fx-core = { path = "../popcorn-fx-core" }
popcorn-fx-platform = { path = "../popcorn-fx-platform" }
popcorn-fx-opensubtitles = { path = "../popcorn-fx-opensubtitles" }

async-trait = "0.1.58"
log = "0.4.16"
log4rs = "1.1.1"
tokio = "1.23.1"
itertools = "0.10.5"

[build-dependencies]
cbindgen = "0.24.3"
