[package]
name = "popcorn-fx"
version = "0.4.0"
edition = "2021"
rust-version = "1.62"
publish = false
license-file = "../LICENSE"
description = "The main Popcorn FX"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
popcorn-fx-core = { path = "../popcorn-fx-core" }
popcorn-fx-platform = { path = "../popcorn-fx-platform" }
popcorn-fx-opensubtitles = { path = "../popcorn-fx-opensubtitles" }

async-trait = "0.1"
futures = { version = "0.3" }
itertools = "0.10"
log = "0.4"
log4rs = {version = "1", features = ["console_writer"] }
tokio = { version = "1", features = ["rt-multi-thread"] }

[build-dependencies]
popcorn-fx-core = { path = "../popcorn-fx-core", features = ["testing"] }

cbindgen = "0.24"
