[package]
name = "popcorn-fx-bootstrap"
version = "0.8.2"
edition = "2021"
rust-version = "1.71"
publish = false
license-file = "../LICENSE"

[[bin]]
name = "popcorn-time"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
popcorn-fx-common = { path = "../popcorn-fx-common" }

directories.workspace = true
log.workspace = true
log4rs = { version = "1", features = ["console_writer"] }
mockall = "0"
serde.workspace = true
serde_yaml.workspace = true
signal-hook = { version = "0.3" }
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }

[dev-dependencies]
popcorn-fx-core = { path = "../popcorn-fx-core", features = ["testing"] }

tempfile = "3"
tokio = { workspace = true, features = ["test-util", "macros"] }

[build-dependencies]
winres = "0.1"