[package]
name = "popcorn-fx-bootstrap"
version = "0.9.2"
edition = "2021"
rust-version = "1.75"
publish = false
license-file = "../LICENSE"

[[bin]]
name = "popcorn-time"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
popcorn-fx-core = { path = "../popcorn-fx-core", default-features = false, features = ["launcher"] }
popcorn-fx-logging = { path = "../popcorn-fx-logging" }

directories.workspace = true
log.workspace = true
signal-hook = { version = "0.4" }
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }

[dev-dependencies]
popcorn-fx-core = { path = "../popcorn-fx-core", features = ["testing"] }

mockall.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util", "macros"] }

[build-dependencies]
winres = "0.1"