[package]
name = "popcorn-fx-common"
version = "0.8.2"
edition = "2021"
rust-version = "1.71"
publish = false
license-file = "../LICENSE"

[lib]
crate-type = ["rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

log.workspace = true
serde.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true

[dev-dependencies]
popcorn-fx-core = { path = "../popcorn-fx-core", features = ["testing"] }

tempfile = "3"