[package]
name = "popcorn-fx-core"
version = "0.7.5"
edition = "2021"
rust-version = "1.62"
publish = false
license-file = "../LICENSE"

[lib]
crate-type = ["rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
popcorn-fx-common = { path = "../popcorn-fx-common" }

async-trait = "0"
bytes = "1.4"
chrono = "0"
derive_more = "0"
directories.workspace = true
downcast-rs = "1"
flate2 = "1"
futures = "0.3"
html-escape = "0"
itertools = "0"
local-ip-address = "0"
log.workspace = true
log4rs = { version = "1", features = ["console_writer"], optional = true }
mockall = "0"
percent-encoding = "2"
rand = "0.8"
regex = "1"
reqwest = { version = "0", features = ["serde_json", "json", "stream"] }
ring = "0.17"
semver = "1.0"
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tar = "0.4"
tempfile = { version = "3", optional = true }
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "fs", "macros"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
url = "2"
warp = "0"

[dev-dependencies]
popcorn-fx-core = { path = "../popcorn-fx-core", features = ["testing"] }

mockall = "0"
httpmock = "0"
tempfile = "3"
tokio = { workspace = true, features = ["test-util", "macros"] }

[features]
testing = ["dep:log4rs", "dep:tempfile"]
