[package]
name = "popcorn-fx-core"
version = "0.8.2"
edition = "2021"
rust-version = "1.75"
publish = false
license-file = "../LICENSE"

[lib]
crate-type = ["rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait.workspace = true
bytes.workspace = true
chrono = { workspace = true, features = ["serde"] }
derive_more.workspace = true
directories.workspace = true
downcast-rs.workspace = true
flate2 = "1"
futures.workspace = true
html-escape = "0"
itertools.workspace = true
local-ip-address.workspace = true
log.workspace = true
log4rs = { version = "1", features = ["console_writer"], optional = true }
mockall = { workspace = true, optional = true }
percent-encoding.workspace = true
rand.workspace = true
regex.workspace = true
reqwest = { workspace = true, features = ["json", "stream"] }
ring = "0.17"
semver = "1.0"
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tar = "0.4"
tempfile = { workspace = true, optional = true }
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "fs", "macros"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
url.workspace = true
warp.workspace = true
clap = { version = "4.5.7", features = ["derive"] }

[dev-dependencies]
popcorn-fx-core = { path = "../popcorn-fx-core", features = ["testing"] }

httpmock.workspace = true
mockall.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util"] }

[features]
default = [
    "cache",
    "launcher",
    "loader",
    "media",
    "platform",
    "playback",
]

cache = []
launcher = []
loader = []
media = []
platform = []
playback = []
testing = [
    "log4rs",
    "tempfile",
    "mockall"
]
