[package]
name = "popcorn-fx-dlna"
version = "0.8.1"
edition = "2021"
rust-version = "1.71"
publish = false
license-file = "../LICENSE"

[lib]
crate-type = ["rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
popcorn-fx-core = { path = "../popcorn-fx-core" }

async-trait.workspace = true
chrono.workspace = true
derive_more.workspace = true
futures.workspace = true
itertools.workspace = true
log.workspace = true
rupnp = "2.0.0"
ssdp-client = "2.0.0"
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util", "macros"] }
tokio-util = { workspace = true }
warp.workspace = true
xml-rs = "0.8"

[dev-dependencies]
popcorn-fx-core = { path = "../popcorn-fx-core", features = ["testing"] }

httpmock.workspace = true
socket2 = "0.5.6"
tempfile.workspace = true