[package]
name = "popcorn-fx-opensubtitles"
version = "0.8.2"
edition = "2021"
rust-version = "1.75"
publish = false
license-file = "../LICENSE"

[lib]
crate-type = ["rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
popcorn-fx-core = { path = "../popcorn-fx-core" }

async-trait.workspace = true
bytes = "1.4"
derive_more.workspace = true
derive-new = "0"
futures.workspace = true
itertools.workspace = true
log.workspace = true
reqwest = { workspace = true, features = ["json", "stream"] }
serde.workspace = true
serde_json.workspace = true
tokio = {workspace = true, features = ["fs"]}

[dev-dependencies]
popcorn-fx-core = { path = "../popcorn-fx-core", features = ["testing"] }

httpmock = "0"
tempfile = "3"
tokio = { version = "1", features = ["test-util", "macros"] }
