[package]
name = "popcorn-fx-opensubtitles"
version = "0.9.5"
edition = "2021"
rust-version = "1.75"
publish = false
license-file = "../LICENSE"

[lib]
crate-type = ["rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
popcorn-fx-core = { path = "../popcorn-fx-core" }

async-trait.workspace = true
derive_more.workspace = true
futures.workspace = true
itertools.workspace = true
log.workspace = true
reqwest = { workspace = true, features = ["json", "stream"] }
serde.workspace = true
serde_json.workspace = true
tokio = {workspace = true, features = ["fs"]}

[dev-dependencies]
popcorn-fx-core = { path = "../popcorn-fx-core", features = ["testing"] }

httpmock.workspace = true
log4rs = { workspace = true, features = ["console_writer"] }
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util", "macros"] }
