[package]
name = "popcorn-fx-platform"
version = "0.5.0"
edition = "2021"
rust-version = "1.62"
publish = false
license-file = "../LICENSE"

[lib]
crate-type = ["rlib"]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
popcorn-fx-core = { path = "../popcorn-fx-core" }

derive_more = "0"
log = "0"
tokio = "1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0", features = [
    "Win32_System_Power",
    "Win32_Foundation",
    "Win32_System_Threading"
] }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
core-foundation = "0.9"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.11", features = ["randr", "screensaver"] }
