[package]
name = "popcorn-fx-platform"
version = "0.8.2"
edition = "2021"
rust-version = "1.75"
publish = false
license-file = "../LICENSE"

[lib]
crate-type = ["rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
popcorn-fx-core = { path = "../popcorn-fx-core" }

derive_more.workspace = true
futures.workspace = true
log.workspace = true
souvlaki = "0.8.2"
tokio.workspace = true

[dev-dependencies]
popcorn-fx-core = { path = "../popcorn-fx-core", features = ["testing"] }

mockall.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = [
    "Win32_System_Power",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging"
] }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
core-foundation = "0.9"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.11", features = ["dpms", "screensaver"] }
