[package]
name = "popcorn-fx-players"
version = "0.8.2"
edition = "2021"
rust-version = "1.75"
publish = false
license-file = "../LICENSE"

[lib]
crate-type = ["rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
popcorn-fx-core = { path = "../popcorn-fx-core" }

async-trait.workspace = true
chbs = { version = "0.1.1", optional = true }
chrono.workspace = true
derive_more.workspace = true
futures.workspace = true
fx-callback.workspace = true
itertools.workspace = true
libc = { version = "0.2.154", optional = true }
libloading = { version = "0.9.0", optional = true }
log.workspace = true
mdns-sd = { version = "0.17.2", optional = true }
rand = { workspace = true, optional = true }
regex = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
rupnp = { version = "3.0.0", optional = true }
rust_cast = { git = "https://github.com/yoep/rust-cast", optional = true, features = ["thread_safe"] }
serde = { workspace = true, optional = true }
serde-xml-rs = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
ssdp-client = { version = "2.0.0", optional = true }
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util", "macros", "process"] }
tokio-util = { workspace = true }
url = { workspace = true, optional = true }
xml-rs = { version = "1.0", optional = true }

[dev-dependencies]
popcorn-fx-core = { path = "../popcorn-fx-core", features = ["testing"] }

httpmock.workspace = true
mockall = "0.12.1"
protobuf.workspace = true
rcgen = "0.14.7"
rust_cast = { git = "https://github.com/yoep/rust-cast", features = ["thread_safe", "cast"] }
socket2 = "0.6.0"
tempfile.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-rustls = "0.26.0"

[features]
default = ["chromecast", "dlna", "vlc", "transcoder"]

chromecast = [
    "libc",
    "libloading",
    "mdns-sd",
    "rand",
    "regex",
    "rust_cast",
    "serde",
    "serde_json",
]
dlna = [
    "rupnp",
    "ssdp-client",
    "xml-rs",
]
vlc = [
    "chbs",
    "reqwest",
    "serde",
    "serde-xml-rs",
    "url",
]
transcoder = []