[package]
name = "popcorn-fx-players"
version = "0.9.5"
edition = "2021"
rust-version = "1.75"
publish = false
license-file = "../LICENSE"

[lib]
crate-type = ["rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
popcorn-fx-core = { path = "../popcorn-fx-core" }

async-trait.workspace = true
chbs = { version = "0.1.1", optional = true }
derive_more.workspace = true
futures.workspace = true
fx-callback.workspace = true
itertools.workspace = true
libc = { workspace = true, optional = true }
libloading = { version = "0.9.0", optional = true }
log.workspace = true
mdns-sd = { version = "0.19.1", optional = true }
rand = { workspace = true, optional = true }
regex = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
rupnp = { version = "3.0.0", optional = true }
rust_cast = { version = "0.21.0", optional = true, features = ["thread_safe"] }
serde = { workspace = true, optional = true }
serde-xml-rs = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
ssdp-client = { version = "2.1.0", optional = true }
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util", "macros", "process"] }
tokio-util = { workspace = true }
url = { workspace = true, optional = true }
xml-rs = { version = "1.0.0", optional = true }

[dev-dependencies]
popcorn-fx-core = { path = "../popcorn-fx-core", features = ["testing"] }

httpmock.workspace = true
log4rs = { workspace = true, features = ["console_writer"] }
mockall.workspace = true
protobuf.workspace = true
rcgen = "0.14.7"
rust_cast = { version = "0.21.0", features = ["thread_safe", "cast"] }
socket2 = "0.6.3"
tempfile.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-rustls.workspace = true

[features]
default = ["chromecast", "dlna", "vlc", "transcoder"]

chromecast = [
    "libc",
    "libloading",
    "mdns-sd",
    "rand",
    "regex",
    "rust_cast",
    "serde",
    "serde_json",
]
dlna = [
    "rupnp",
    "ssdp-client",
    "xml-rs",
]
vlc = [
    "chbs",
    "reqwest",
    "serde",
    "serde-xml-rs",
    "url",
]
transcoder = []