[package]
name = "popcorn-fx-torrent-stream"
version = "0.5.1"
edition = "2021"
rust-version = "1.62"
publish = false
license-file = "../LICENSE"

[lib]
crate-type = ["rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
popcorn-fx-core = { path = "../popcorn-fx-core" }

bytes = "1"
derive_more = "0"
futures = "0.3"
hyper = { version = "0.14", features = ["http2", "server", "stream"] }
itertools = "0.10"
local-ip-address = "0.5"
log.workspace = true
percent-encoding = "2"
thiserror = "1.0"
tokio = { workspace = true, features = ["rt-multi-thread", "fs"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
url = "2"
warp = "0.3"

[dev-dependencies]
popcorn-fx-core = { path = "../popcorn-fx-core", features = ["testing"] }

tempfile = "3"
reqwest = "0.11"
