[package]
name = "popcorn-fx-torrent"
version = "0.8.2"
edition = "2021"
rust-version = "1.75"
publish = false
license-file = "../LICENSE"
keywords = ["bittorrent", "libtorrent", "torrent", "magnet"]

[lib]
crate-type = ["rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait.workspace = true
axum.workspace = true
base32.workspace = true
base64.workspace = true
bit-vec = "0.8"
bitmask-enum = "2.2"
byteorder.workspace = true
bytes = "1.11"
crc = "3.3"
derive_more = { workspace = true }
futures.workspace = true
fx-callback.workspace = true
fx-handle.workspace = true
hex = "0.4"
itertools.workspace = true
log.workspace = true
percent-encoding.workspace = true
rand.workspace = true
reqwest = { workspace = true, features = ["stream"] }
serde.workspace = true
serde_bencode = "0.2"
serde_bytes = "0.11"
sha1 = "0.10.6"
sha2 = "0.10.9"
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "time", "macros"] }
tokio-util.workspace = true
url.workspace = true

[features]
default = ["dht", "extension-metadata", "extension-pex", "extension-holepunch", "extension-donthave"]

dht = []
extension-donthave = []
extension-holepunch = []
extension-metadata = []
extension-pex = []

[dev-dependencies]
chrono = "0.4.42"
crossterm = { version = "0.29.0", features = ["event-stream"] }
hex-literal = "0.4.1"
log4rs = { workspace = true, features = ["console_writer"] }
mockall.workspace = true
ratatui = "0.29.0"
tempfile.workspace = true
tokio = { workspace = true, features = ["signal"] }

[package.metadata.docs.rs]
all-features = true
