[package]
name = "popcorn-fx-trakt"
version = "0.8.1"
edition = "2021"
rust-version = "1.71"
publish = false
license-file = "../LICENSE"

[lib]
crate-type = ["rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
popcorn-fx-core = { path = "../popcorn-fx-core" }

async-trait.workspace = true
chrono.workspace = true
derive_more.workspace = true
itertools.workspace = true
log.workspace = true
oauth2.workspace = true
open.workspace = true
reqwest = { workspace = true, features = ["stream"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
tokio-util = { workspace = true }
url.workspace = true
warp.workspace = true

[dev-dependencies]
popcorn-fx-core = { path = "../popcorn-fx-core", features = ["testing"] }

tempfile.workspace = true
httpmock.workspace = true