[package]
name = "popcorn-fx-trakt"
version = "0.9.1"
edition = "2021"
rust-version = "1.75"
publish = false
license-file = "../LICENSE"

[lib]
crate-type = ["rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
popcorn-fx-core = { path = "../popcorn-fx-core" }

axum.workspace = true
async-trait.workspace = true
chrono.workspace = true
derive_more.workspace = true
fx-callback.workspace = true
log.workspace = true
oauth2 = { workspace = true, features = ["reqwest"] }
reqwest = { version = "0.12", features = ["stream", "json"] } # Follow the version restriction of oauth2
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
tokio-util = { workspace = true }
url.workspace = true

[dev-dependencies]
popcorn-fx-core = { path = "../popcorn-fx-core", features = ["testing"] }

tempfile.workspace = true
httpmock.workspace = true